Fix unnecessary scrollbar

--- a/heltour/tournament/static/tournament/css/_dark_mode.scss
+++ b/heltour/tournament/static/tournament/css/_dark_mode.scss
@@ -1,6 +1,6 @@
 .darkmode-toggle {
-  width: 19px;
-  height: 19px;
+  width: 18px;
+  height: 18px;
 }
 
 body.dark {
