--- a/heltour/tournament/static/tournament/css/main.css
+++ b/heltour/tournament/static/tournament/css/main.css
@@ -1706,8 +1706,8 @@ body.theme-yellow .navbar .navbar-nav .open .dropdown-menu > li > a:focus {
 }
 
 .darkmode-toggle {
-  width: 19px;
-  height: 19px;
+  width: 18px;
+  height: 18px;
 }
 
 body.dark {
